<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_otpsender_conatct_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.thoughwar.view.activity.ThoughtWarKingDetailsActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/profile_card_view"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        card_view:cardUseCompatPadding="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/king_pic"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/background_circle"/>


            <com.example.thoughwar.view.custom.FontTextView
                android:id="@+id/king_name"
                android:layout_toLeftOf="@+id/king_pic"
                android:layout_marginLeft="@dimen/margin_view_medium"
                android:layout_marginTop="@dimen/margin_view_normal"
                android:layout_marginRight="@dimen/margin_view_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_large"
                app:customFont="@string/cuprum_bold"/>

            <com.example.thoughwar.view.custom.FontTextView
                android:id="@+id/rate_text"
                android:layout_below="@+id/king_name"
                android:layout_toLeftOf="@+id/king_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/margin_view_small"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/text_size_small"
                app:customFont="@string/cuprum_regular"
                />




        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_below="@+id/profile_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="5dp"
        android:layout_marginLeft="@dimen/margin_view_normal"
        android:layout_marginRight="@dimen/margin_view_normal"
        android:layout_marginTop="@dimen/margin_view_large">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.thoughwar.view.custom.FontTextView
                android:id="@+id/battle_won"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view_small"
                android:layout_marginLeft="@dimen/margin_view_extra_small"
                android:layout_alignParentLeft="true"
                android:text="@string/battle_won_text"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorBlack"
                app:customFont="@string/cuprum_regular"/>
            <com.example.thoughwar.view.custom.FontTextView
                android:id="@+id/battle_won_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view_small"
                android:layout_marginRight="@dimen/margin_view_extra_small"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorBlack"
                app:customFont="@string/cuprum_regular"/>

            <View
                android:id="@+id/win_divider_line"
                android:layout_below="@+id/battle_won"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height_thin"
                android:layout_marginTop="@dimen/margin_view_small"
                android:background="@color/colorBlack"/>


            <com.example.thoughwar.view.custom.FontTextView
                android:id="@+id/battle_loss"
                android:layout_below="@+id/win_divider_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view_small"
                android:layout_marginLeft="@dimen/margin_view_extra_small"
                android:layout_alignParentLeft="true"
                android:text="@string/battle_lost_text"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorBlack"
                app:customFont="@string/cuprum_regular"/>
            <com.example.thoughwar.view.custom.FontTextView
                android:id="@+id/battle_loss_score"
                android:layout_below="@+id/win_divider_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view_small"
                android:layout_marginRight="@dimen/margin_view_extra_small"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorBlack"
                app:customFont="@string/cuprum_regular"/>

            <View
                android:id="@+id/loss_divider_line"
                android:layout_below="@+id/battle_loss"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height_thin"
                android:layout_marginTop="@dimen/margin_view_small"
                android:background="@color/colorBlack"/>


            <com.example.thoughwar.view.custom.FontTextView
                android:id="@+id/strength"
                android:layout_below="@+id/loss_divider_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view_small"
                android:layout_marginLeft="@dimen/margin_view_extra_small"
                android:layout_alignParentLeft="true"
                android:text="@string/strength"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorBlack"
                app:customFont="@string/cuprum_regular"/>
            <com.example.thoughwar.view.custom.FontTextView
                android:id="@+id/strength_text"
                android:layout_below="@+id/loss_divider_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view_small"
                android:layout_marginRight="@dimen/margin_view_extra_small"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorBlack"
                app:customFont="@string/cuprum_regular"/>

            <View
                android:id="@+id/strength_divider_line"
                android:layout_below="@+id/strength"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height_thin"
                android:layout_marginTop="@dimen/margin_view_small"
                android:background="@color/colorBlack"/>

            <com.example.thoughwar.view.custom.FontTextView
                android:id="@+id/battle_type"
                android:layout_below="@+id/strength_divider_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view_small"
                android:layout_marginLeft="@dimen/margin_view_extra_small"
                android:layout_alignParentLeft="true"
                android:text="@string/strength_type"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorBlack"
                app:customFont="@string/cuprum_regular"/>

            <com.example.thoughwar.view.custom.FontTextView
                android:id="@+id/battle_type_text"
                android:layout_below="@+id/strength_divider_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view_small"
                android:layout_marginBottom="@dimen/margin_view_small"
                android:layout_marginRight="@dimen/margin_view_extra_small"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorBlack"
                app:customFont="@string/cuprum_regular"/>


        </RelativeLayout>
    </android.support.v7.widget.CardView>

        </RelativeLayout>
